Create a textured painting option for Krita brushes

see http://www.davidrevoy.com/index.php?article107/textured-brush-in-floss-digital-painting
for the inspiration for this feature.

Things to consider:

 * which other brush engines can make use of this option?
 * what other options would be fun to implement?
 * is the cutoff feature functionally similar to grain? It looks
   a bit like it.

BUG:288696